--- a/Task-1/signup.html
+++ b/Task-1/signup.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <title>Login Page</title>
+    <title>Sign In</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -81,7 +81,7 @@
               Sign Up
             </button>
             <p class="already">
-              Already on LinkedIn?&nbsp;<a href="signup.html">Sign In</a>
+              Already have a account?&nbsp;<a href="signup.html">Sign In</a>
             </p>
           </form>
         </div>
